# OpenCharge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  VISION.md  project_structure.txt  pyproject.toml
desktop/core/: __init__.py  charger.py  configuration.py  connector.py  enums.py  event_bus.py  exceptions.py  logger.py  state_machine.py  version.py
desktop/opencharge/: __init__.py
desktop/opencharge/app/: __init__.py
desktop/opencharge/core/: __init__.py  charger.py  configuration.py  connector.py  enums.py  event_bus.py  exceptions.py  logger.py  state_machine.py  version.py
desktop/opencharge/gui/: __init__.py
desktop/opencharge/models/: __init__.py
desktop/opencharge/services/: __init__.py
desktop/opencharge/simulator/: __init__.py
desktop/tests/: __init__.py
desktop/tests/core/: __init__.py  test_charger.py  test_configuration.py  test_connector.py  test_enums.py  test_event_bus.py  test_exceptions.py  test_logger.py  test_state_machine.py
docs/software/: OC-SDS-001_OpenCharge_Core.md
