[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "opencharge"
version = "0.1.0"
description = "Commercial-grade open-source AC EV Charger platform implementing IEC 61851, OCPP, and embedded firmware."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Ahmed Ghufran" }
]

keywords = [
    "ev",
    "evse",
    "charger",
    "electric-vehicle",
    "ocpp",
    "iec61851",
    "stm32",
    "embedded",
    "raspberry-pi",
    "simulator"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",

    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware"
]

dependencies = [
]

[project.optional-dependencies]

dev = [
    "black>=25.0",
    "ruff>=0.12",
    "mypy>=1.16",
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "pre-commit>=4.2",
    "coverage[toml]>=7.10",
    "tox>=4.27",
]

simulator = [
    "PySide6>=6.9",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
]

all = [
    "opencharge[dev]",
    "opencharge[simulator]",
    "opencharge[docs]",
]

[project.urls]
Homepage = "https://github.com/aghufran93/OpenCharge"
Documentation = "https://github.com/aghufran93/OpenCharge/wiki"
Repository = "https://github.com/aghufran93/OpenCharge"
Issues = "https://github.com/aghufran93/OpenCharge/issues"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "tests"
]

addopts = [
    "--strict-markers",
    "--cov=opencharge",
    "--cov-report=term-missing"
]

[tool.coverage.run]
source = [
    "opencharge"
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = [
    "opencharge"
]