[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "opencharge"
version = "0.1.0a1"
description = "Commercial-grade open-source AC EV charging platform with desktop simulation, IEC 61851, OCPP, STM32 firmware, Raspberry Pi HMI, and hardware reference designs."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Ahmed Ghufran", email = "aghufran93@gmail.com" }
]

maintainers = [
    { name = "Ahmed Ghufran", email = "aghufran93@gmail.com" }
]

keywords = [
    "ev",
    "evse",
    "electric-vehicle",
    "charging",
    "charger",
    "ocpp",
    "iec61851",
    "stm32",
    "embedded",
    "raspberry-pi",
    "simulator",
    "modbus",
    "python"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Education",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Hardware"
]

dependencies = [
    "ocpp>=2.1",
    "pyserial>=3.5",
]

[project.optional-dependencies]

simulator = [
    "PySide6>=6.9"
]

dev = [
    "black>=25.0",
    "ruff>=0.12",
    "mypy>=1.16",
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "coverage[toml]>=7.10",
    "pre-commit>=4.2",
    "tox>=4.27",
    "build>=1.2",
    "twine>=6.1"
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6"
]

all = [
    "opencharge[dev]",
    "opencharge[simulator]",
    "opencharge[docs]"
]

[project.urls]
Homepage = "https://github.com/aghufran93/OpenCharge"
Repository = "https://github.com/aghufran93/OpenCharge"
Documentation = "https://github.com/aghufran93/OpenCharge/wiki"
Issues = "https://github.com/aghufran93/OpenCharge/issues"
Discussions = "https://github.com/aghufran93/OpenCharge/discussions"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM"
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "desktop/tests",
    "firmware/tests"
]

addopts = [
    "--strict-markers",
    "--cov=desktop/opencharge",
    "--cov-report=term-missing"
]

[tool.coverage.run]
source = [
    "desktop/opencharge"
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = [
    "desktop/opencharge"
]

[project.scripts]
opencharge = "opencharge.app.main:main"
